feat: add support section with chat link and related translations

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/branding/favicon.svg" />
+    <link rel="alternate icon" type="image/x-icon" href="/branding/favicon.ico" />
+    <link rel="apple-touch-icon" href="/branding/favicon-512.png" />
     <title>Meshtastic Firmware Builder</title>
   </head>
   <body>
